--- a/AlgorithmGossip/StackByLink.htm
+++ b/AlgorithmGossip/StackByLink.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>°ïÅ| - ¨Ï¥ÎÃìµ²¹ê§@¡]C »y¨¥°ÊºA°O¾ĞÅé«Å§i¡^</title>
+  <title>å †ç–Š - ä½¿ç”¨éˆçµå¯¦ä½œï¼ˆC èªè¨€å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šï¼‰</title>
 </head>
 
 
@@ -51,40 +51,40 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;°ïÅ| - ¨Ï¥ÎÃìµ²¹ê§@¡]C »y¨¥°ÊºA°O¾ĞÅé«Å§i¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å †ç–Š - ä½¿ç”¨éˆçµå¯¦ä½œï¼ˆC èªè¨€å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¨Ï¥Î°}¦C¹ê§@°ïÅ|¡A·|¨ü¨ì°}¦C¤j¤p¥²¶·¨Æ¥ı«Å§i¦nªº­­¨î¡A§Ú­Ì¥i¥H¨Ï¥ÎÃìµ²¡]link¡^ªº¤è¦¡¨Ó¹ê§@°ïÅ|¡A¥H°ÊºA°O¾ĞÅé«Å§iªº¤è¦¡¨Ó·s¼W¨C¤@­Ó¤¸¯À¡C<br>
-<h2>¸Ñªk</h2>
-Ãìµ²¡]link¡^¬O¥Ñ¸`ÂI²Õ¦¨¡A¨C¤@­Ó¸`ÂIÀx¦s¸ê®Æ¤§¥~¡AÁÙÀx¦s¤U¤@­Ó¸`ÂIªº¦ì¸m¡A¦p¤U¹Ï©Ò¥Ü¡G<br>
+<h2>èªªæ˜</h2>
+ä½¿ç”¨é™£åˆ—å¯¦ä½œå †ç–Šï¼Œæœƒå—åˆ°é™£åˆ—å¤§å°å¿…é ˆäº‹å…ˆå®£å‘Šå¥½çš„é™åˆ¶ï¼Œæˆ‘å€‘å¯ä»¥ä½¿ç”¨éˆçµï¼ˆlinkï¼‰çš„æ–¹å¼ä¾†å¯¦ä½œå †ç–Šï¼Œä»¥å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šçš„æ–¹å¼ä¾†æ–°å¢æ¯ä¸€å€‹å…ƒç´ ã€‚<br>
+<h2>è§£æ³•</h2>
+éˆçµï¼ˆlinkï¼‰æ˜¯ç”±ç¯€é»çµ„æˆï¼Œæ¯ä¸€å€‹ç¯€é»å„²å­˜è³‡æ–™ä¹‹å¤–ï¼Œé‚„å„²å­˜ä¸‹ä¸€å€‹ç¯€é»çš„ä½ç½®ï¼Œå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š<br>
 <div style="text-align: center;"><img style="width: 368px; height: 34px;" alt="Link" title="Link" src="images/stackByLink-1.jpg"></div>
 <br>
 <br>
-¹ï°ïÅ|¦Ó¨¥¡A¥[¤J·s¸`ÂI»P§R°£¸`ÂIªº¤èªk¦p¤U¹Ï©Ò¥Ü¡G<br>
-·s¼W¸`ÂI¡G<br>
+å°å †ç–Šè€Œè¨€ï¼ŒåŠ å…¥æ–°ç¯€é»èˆ‡åˆªé™¤ç¯€é»çš„æ–¹æ³•å¦‚ä¸‹åœ–æ‰€ç¤ºï¼š<br>
+æ–°å¢ç¯€é»ï¼š<br>
 <div style="text-align: center;"><img style="width: 391px; height: 116px;" alt="Link" title="Link" src="images/stackByLink-2.jpg"></div>
 <br>
 <br>
-§R°£¸`ÂI¡G<br>
+åˆªé™¤ç¯€é»ï¼š<br>
 <div style="text-align: center;"><img style="width: 394px; height: 115px;" alt="Link" title="Link" src="images/stackByLink-3.jpg"></div>
 <br>
 <br>
-Ãìµ²¤]¥i¥H¨Ï¥Î°}¦C¨Ó¹ê§@¡A¤£¹L¦b³oÃä§Ú­Ì¥H°ÊºA°O¾ĞÅé«Å§iªº¤è¦¡¨Ó¶i¦æ¡A¦bC»y¨¥¤¤¡A³o¬O¹ê§@Ãìµ²ªº°ò¥»§@ªk¡A¥i¥H¤£¨ü°}¦C¤j¤p¥²¶·¥ı¦æ«Å§iªº­­¨î¡A©Ò¥H¨Ï¥ÎÃìµ²¹ê§@°ïÅ|®É¡A´N¤£·|¦³°ïÅ|¤wº¡ªº°İÃD¡]°£¤F°O¾ĞÅé¥ÎºÉ¤§¥~¡^¡C<br>
+éˆçµä¹Ÿå¯ä»¥ä½¿ç”¨é™£åˆ—ä¾†å¯¦ä½œï¼Œä¸éåœ¨é€™é‚Šæˆ‘å€‘ä»¥å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šçš„æ–¹å¼ä¾†é€²è¡Œï¼Œåœ¨Cèªè¨€ä¸­ï¼Œé€™æ˜¯å¯¦ä½œéˆçµçš„åŸºæœ¬ä½œæ³•ï¼Œå¯ä»¥ä¸å—é™£åˆ—å¤§å°å¿…é ˆå…ˆè¡Œå®£å‘Šçš„é™åˆ¶ï¼Œæ‰€ä»¥ä½¿ç”¨éˆçµå¯¦ä½œå †ç–Šæ™‚ï¼Œå°±ä¸æœƒæœ‰å †ç–Šå·²æ»¿çš„å•é¡Œï¼ˆé™¤äº†è¨˜æ†¶é«”ç”¨ç›¡ä¹‹å¤–ï¼‰ã€‚<br>
 <br>
-¤W­±ªº¹Ï»¡¥u¬O­Ó¥Ü·N¡A¦bºtºâªº®É­Ô¡A·|»İ­n¤@¨Ç¼È¦sÅÜ¼Æ¨Ó¨ó§U¸`ÂI·s¼W»P§R°£®Éªº³sµ²§ó°Ê¡A½Ğª½±µ°Ñ·Ó¥H¤Uªºµ{¦¡¹ê§@¡C <br>
+ä¸Šé¢çš„åœ–èªªåªæ˜¯å€‹ç¤ºæ„ï¼Œåœ¨æ¼”ç®—çš„æ™‚å€™ï¼Œæœƒéœ€è¦ä¸€äº›æš«å­˜è®Šæ•¸ä¾†å”åŠ©ç¯€é»æ–°å¢èˆ‡åˆªé™¤æ™‚çš„é€£çµæ›´å‹•ï¼Œè«‹ç›´æ¥åƒç…§ä»¥ä¸‹çš„ç¨‹å¼å¯¦ä½œã€‚ <br>
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>struct node { <br>    int data; <br>    struct node *next; <br>}; <br><br>typedef struct node getnode; <br><br>getnode* creates(void);         // «Ø¥ß°ïÅ| <br>int isEmpty(getnode*);           // °ïÅ|¤wªÅ <br>int stacktop(getnode*);   // ¶Ç¦^³»ºİ¤¸¯À <br>getnode* add(getnode*, int);   // ·s¼W¤¸¯À <br>getnode* delete(getnode*);     // §R°£¤¸¯À <br>void list(getnode*);      // Åã¥Ü©Ò¦³¤º®e <br><br>int main(void) { <br>    getnode* sTop; <br>    int input, select; <br><br>    sTop = creates(); <br><br>    while(1) { <br>        printf("\n\n½Ğ¿é¤J¿ï¶µ(-1µ²§ô)¡G"); <br>        printf("\n(1)´¡¤J­È¦Ü°ïÅ|"); <br>        printf("\n(2)Åã¥Ü°ïÅ|³»ºİ"); <br>        printf("\n(3)§R°£³»ºİ­È"); <br>        printf("\n(4)Åã¥Ü©Ò¦³¤º®e"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\n¿é¤J­È¡G"); <br>                scanf("%d", &amp;input); <br>                sTop = add(sTop, input); <br>                break; <br>            case 2: <br>                printf("\n³»ºİ­È¡G%d", stacktop(sTop)); <br>                break; <br>            case 3: <br>                sTop = delete(sTop); <br>                break; <br>            case 4: <br>                list(sTop); <br>                break; <br>            default: <br>                printf("\n¿ï¶µ¿ù»~¡I"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>getnode* creates() { <br>    return NULL; <br>} <br><br>int isEmpty(getnode* top) { <br>    return (top == NULL); <br>} <br><br>int stacktop(getnode* top) { <br>    return top-&gt;data; <br>} <br><br>getnode* add(getnode* top, int item) { <br>    getnode* newnode; <br><br>    newnode = (getnode*) malloc(sizeof(getnode)); <br><br>    if(newnode == NULL) { <br>        printf("\n°O¾ĞÅé°t¸m¥¢±Ñ¡I"); <br>        exit(1); <br>    } <br><br>    newnode-&gt;data = item; <br>    newnode-&gt;next = top; <br>    top = newnode; <br><br>    return top; <br>} <br><br>getnode* delete(getnode* top) { <br>    getnode* tmpnode; <br><br>    tmpnode = top; <br>    if(tmpnode == NULL) { <br>        printf("\n°ïÅ|¤wªÅ¡I"); <br>        return NULL; <br>    } <br><br>    top = top-&gt;next; <br>    free(tmpnode); <br><br>    return top; <br>} <br><br>void list(getnode* top) { <br>    getnode* tmpnode; <br>    tmpnode = top; <br><br>    printf("\n°ïÅ|¤º®e¡G"); <br>    while(tmpnode != NULL) { <br>        printf("%d ", tmpnode-&gt;data); <br>        tmpnode = tmpnode-&gt;next; <br>    } <br>}</pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>struct node { <br>    int data; <br>    struct node *next; <br>}; <br><br>typedef struct node getnode; <br><br>getnode* creates(void);         // å»ºç«‹å †ç–Š <br>int isEmpty(getnode*);           // å †ç–Šå·²ç©º <br>int stacktop(getnode*);   // å‚³å›é ‚ç«¯å…ƒç´  <br>getnode* add(getnode*, int);   // æ–°å¢å…ƒç´  <br>getnode* delete(getnode*);     // åˆªé™¤å…ƒç´  <br>void list(getnode*);      // é¡¯ç¤ºæ‰€æœ‰å…§å®¹ <br><br>int main(void) { <br>    getnode* sTop; <br>    int input, select; <br><br>    sTop = creates(); <br><br>    while(1) { <br>        printf("\n\nè«‹è¼¸å…¥é¸é …(-1çµæŸ)ï¼š"); <br>        printf("\n(1)æ’å…¥å€¼è‡³å †ç–Š"); <br>        printf("\n(2)é¡¯ç¤ºå †ç–Šé ‚ç«¯"); <br>        printf("\n(3)åˆªé™¤é ‚ç«¯å€¼"); <br>        printf("\n(4)é¡¯ç¤ºæ‰€æœ‰å…§å®¹"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\nè¼¸å…¥å€¼ï¼š"); <br>                scanf("%d", &amp;input); <br>                sTop = add(sTop, input); <br>                break; <br>            case 2: <br>                printf("\né ‚ç«¯å€¼ï¼š%d", stacktop(sTop)); <br>                break; <br>            case 3: <br>                sTop = delete(sTop); <br>                break; <br>            case 4: <br>                list(sTop); <br>                break; <br>            default: <br>                printf("\né¸é …éŒ¯èª¤ï¼"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>getnode* creates() { <br>    return NULL; <br>} <br><br>int isEmpty(getnode* top) { <br>    return (top == NULL); <br>} <br><br>int stacktop(getnode* top) { <br>    return top-&gt;data; <br>} <br><br>getnode* add(getnode* top, int item) { <br>    getnode* newnode; <br><br>    newnode = (getnode*) malloc(sizeof(getnode)); <br><br>    if(newnode == NULL) { <br>        printf("\nè¨˜æ†¶é«”é…ç½®å¤±æ•—ï¼"); <br>        exit(1); <br>    } <br><br>    newnode-&gt;data = item; <br>    newnode-&gt;next = top; <br>    top = newnode; <br><br>    return top; <br>} <br><br>getnode* delete(getnode* top) { <br>    getnode* tmpnode; <br><br>    tmpnode = top; <br>    if(tmpnode == NULL) { <br>        printf("\nå †ç–Šå·²ç©ºï¼"); <br>        return NULL; <br>    } <br><br>    top = top-&gt;next; <br>    free(tmpnode); <br><br>    return top; <br>} <br><br>void list(getnode* top) { <br>    getnode* tmpnode; <br>    tmpnode = top; <br><br>    printf("\nå †ç–Šå…§å®¹ï¼š"); <br>    while(tmpnode != NULL) { <br>        printf("%d ", tmpnode-&gt;data); <br>        tmpnode = tmpnode-&gt;next; <br>    } <br>}</pre>
 <br>
 <br>
 
