--- a/AlgorithmGossip/StackByArray.htm
+++ b/AlgorithmGossip/StackByArray.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>°ïÅ| - ¨Ï¥Î°}¦C¹ê§@</title>
+  <title>å †ç–Š - ä½¿ç”¨é™£åˆ—å¯¦ä½œ</title>
 </head>
 
 
@@ -51,33 +51,33 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: °ïÅ| - ¨Ï¥Î°}¦C¹ê§@</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: å †ç–Š - ä½¿ç”¨é™£åˆ—å¯¦ä½œ</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-°ïÅ|¬O¤@ºØ¥ı¶i«á¥Xªº¸ê®Æµ²ºc¡A´N¦p¦P±z±N®Ñ¥»©ñ¤J½c¤l¡A³Ì¥ı©ñ¶iªº®Ñ¥»¦b³Ì«á¤~¯à®³¥X¨Ó¡A©Ò¦³¸ê®Æªº¥[¤J»P§R°£³£¦b°ïÅ|³»ºİ§¹¦¨¡C°ïÅ|ªº¨Ï¥Î«Ü¼s¡A»¼°j
-´N¬O¤@ºØ°ïÅ|¡A¦b¤§«e¤¶²Ğ¤¤§Ç¦¡Âà«á§Ç¦¡®É¡A¤]¨Ï¥Î¨ì°ïÅ|ªºµ²ºc¡C <br>
-
-<br>
-°ïÅ|¥i¥H¨Ï¥Î¦hºØ¤è¦¡¹ê§@¡A¨ä¤¤¨Ï¥Î°}¦C¬O³ÌÂ²³æªº¤èªk¡A¤]³Ì¤£¨ü¨Ï¥Îªºµ{¦¡»y¨¥©Ò­­¨î¡C
-<h2> ¸Ñªk</h2>
-
-°ïÅ|³Ì­«­nªº´N¬O°O¿ı³»ºİªº¦ì¸m¡A¤×¨ä¬O¦b°ïÅ|ªÅ¶¡©T©wªº±¡ªp¤U¡A¥²¶·ª`·N°ïÅ|¤wº¡©Î¤wªÅªº§PÂ_¡A·í¨Ï¥Î°}¦C¹ê§@°ïÅ|®É¤×¨ä­«­n¡C <br>
+å †ç–Šæ˜¯ä¸€ç¨®å…ˆé€²å¾Œå‡ºçš„è³‡æ–™çµæ§‹ï¼Œå°±å¦‚åŒæ‚¨å°‡æ›¸æœ¬æ”¾å…¥ç®±å­ï¼Œæœ€å…ˆæ”¾é€²çš„æ›¸æœ¬åœ¨æœ€å¾Œæ‰èƒ½æ‹¿å‡ºä¾†ï¼Œæ‰€æœ‰è³‡æ–™çš„åŠ å…¥èˆ‡åˆªé™¤éƒ½åœ¨å †ç–Šé ‚ç«¯å®Œæˆã€‚å †ç–Šçš„ä½¿ç”¨å¾ˆå»£ï¼Œéè¿´
+å°±æ˜¯ä¸€ç¨®å †ç–Šï¼Œåœ¨ä¹‹å‰ä»‹ç´¹ä¸­åºå¼è½‰å¾Œåºå¼æ™‚ï¼Œä¹Ÿä½¿ç”¨åˆ°å †ç–Šçš„çµæ§‹ã€‚ <br>
 
 <br>
-°ïÅ|ªº°ò¥»¾Ş§@¦³¤­¶µ¡G«Ø¥ß°ïÅ|¡B¶Ç¦^³»ºİ¤¸¯À¡B¥[¤J¤¸¯À¦Ü°ïÅ|¡B§R°£¤¸¯À¦Ü°ïÅ|¡BÅã¥Ü°ïÅ|©Ò¦³¤º®e¡C¬°¤F¤è«K¡A¥[¤J¤@­Ó´ú¸Õ°ïÅ|¬O§_¬°ªÅªº¤èªk¡A¸Ô
-²Óªººtºâ¨Ã¤£Ãø¡Aª½±µ¦C¥Xµ{¦¡¹ê§@¡C 
-<h2> ¹ê§@</h2>
+å †ç–Šå¯ä»¥ä½¿ç”¨å¤šç¨®æ–¹å¼å¯¦ä½œï¼Œå…¶ä¸­ä½¿ç”¨é™£åˆ—æ˜¯æœ€ç°¡å–®çš„æ–¹æ³•ï¼Œä¹Ÿæœ€ä¸å—ä½¿ç”¨çš„ç¨‹å¼èªè¨€æ‰€é™åˆ¶ã€‚
+<h2> è§£æ³•</h2>
+
+å †ç–Šæœ€é‡è¦çš„å°±æ˜¯è¨˜éŒ„é ‚ç«¯çš„ä½ç½®ï¼Œå°¤å…¶æ˜¯åœ¨å †ç–Šç©ºé–“å›ºå®šçš„æƒ…æ³ä¸‹ï¼Œå¿…é ˆæ³¨æ„å †ç–Šå·²æ»¿æˆ–å·²ç©ºçš„åˆ¤æ–·ï¼Œç•¶ä½¿ç”¨é™£åˆ—å¯¦ä½œå †ç–Šæ™‚å°¤å…¶é‡è¦ã€‚ <br>
+
+<br>
+å †ç–Šçš„åŸºæœ¬æ“ä½œæœ‰äº”é …ï¼šå»ºç«‹å †ç–Šã€å‚³å›é ‚ç«¯å…ƒç´ ã€åŠ å…¥å…ƒç´ è‡³å †ç–Šã€åˆªé™¤å…ƒç´ è‡³å †ç–Šã€é¡¯ç¤ºå †ç–Šæ‰€æœ‰å…§å®¹ã€‚ç‚ºäº†æ–¹ä¾¿ï¼ŒåŠ å…¥ä¸€å€‹æ¸¬è©¦å †ç–Šæ˜¯å¦ç‚ºç©ºçš„æ–¹æ³•ï¼Œè©³
+ç´°çš„æ¼”ç®—ä¸¦ä¸é›£ï¼Œç›´æ¥åˆ—å‡ºç¨‹å¼å¯¦ä½œã€‚ 
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 10 <br><br>int creates(int[]);         // «Ø¥ß°ïÅ| <br>int isEmpty(int);           // °ïÅ|¤wªÅ <br>int stacktop(int[], int);   // ¶Ç¦^³»ºİ¤¸¯À <br>int add(int[], int, int);   // ´¡¤J¤¸¯À <br>int delete(int[], int);     // §R°£¤¸¯À <br>void list(int[], int);      // Åã¥Ü©Ò¦³¤º®e <br><br>int main(void) { <br>    int stack[MAX]; <br>    int top; <br>    int input, select; <br><br>    top = creates(stack); <br><br>    while(1) { <br>        printf("\n\n½Ğ¿é¤J¿ï¶µ(-1µ²§ô)¡G"); <br>        printf("\n(1)´¡¤J­È¦Ü°ïÅ|"); <br>        printf("\n(2)Åã¥Ü°ïÅ|³»ºİ"); <br>        printf("\n(3)§R°£³»ºİ­È"); <br>        printf("\n(4)Åã¥Ü©Ò¦³¤º®e"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\n¿é¤J­È¡G"); <br>                scanf("%d", &amp;input); <br>                top = add(stack, top, input); <br>                break; <br>            case 2: <br>                printf("\n³»ºİ­È¡G%d", stacktop(stack, top)); <br>                break; <br>            case 3: <br>                top = delete(stack, top); <br>                break; <br>            case 4: <br>                list(stack, top); <br>                break; <br>            default: <br>                printf("\n¿ï¶µ¿ù»~¡I"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>// ¥H¤U¬°°ïÅ|¾Ş§@ªº¹ê§@ <br>int creates(int stack[]) { <br>    int i; <br><br>    for(i = 0; i &lt; MAX; i++) <br>        stack[i] = 0; <br><br>    return -1; <br>} <br><br>int isEmpty(int top) { <br>    return (top == -1); <br>} <br><br>int stacktop(int stack[], int top) { <br>    return stack[top]; <br>} <br><br>int add(int stack[], int top, int item) { <br>    int t = top; <br><br>    if(t &gt;= MAX-1) { <br>        printf("\n°ïÅ|¤wº¡¡I"); <br>        return t; <br>    } <br><br>    stack[++t] = item; <br><br>    return t; <br>} <br><br>int delete(int stack[], int top) { <br>    int t = top; <br><br>    if(isEmpty(t)) { <br>        printf("\n°ïÅ|¤wªÅ¡I"); <br>        return t; <br>    } <br><br>    return --t; <br>} <br><br>void list(int stack[], int top) { <br>    int t = top; <br><br>    printf("\n°ïÅ|¤º®e¡G"); <br>    while(!isEmpty(t)) { <br>        printf("%d ", stack[t]); <br>        t--; <br>    } <br>}</pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 10 <br><br>int creates(int[]);         // å»ºç«‹å †ç–Š <br>int isEmpty(int);           // å †ç–Šå·²ç©º <br>int stacktop(int[], int);   // å‚³å›é ‚ç«¯å…ƒç´  <br>int add(int[], int, int);   // æ’å…¥å…ƒç´  <br>int delete(int[], int);     // åˆªé™¤å…ƒç´  <br>void list(int[], int);      // é¡¯ç¤ºæ‰€æœ‰å…§å®¹ <br><br>int main(void) { <br>    int stack[MAX]; <br>    int top; <br>    int input, select; <br><br>    top = creates(stack); <br><br>    while(1) { <br>        printf("\n\nè«‹è¼¸å…¥é¸é …(-1çµæŸ)ï¼š"); <br>        printf("\n(1)æ’å…¥å€¼è‡³å †ç–Š"); <br>        printf("\n(2)é¡¯ç¤ºå †ç–Šé ‚ç«¯"); <br>        printf("\n(3)åˆªé™¤é ‚ç«¯å€¼"); <br>        printf("\n(4)é¡¯ç¤ºæ‰€æœ‰å…§å®¹"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\nè¼¸å…¥å€¼ï¼š"); <br>                scanf("%d", &amp;input); <br>                top = add(stack, top, input); <br>                break; <br>            case 2: <br>                printf("\né ‚ç«¯å€¼ï¼š%d", stacktop(stack, top)); <br>                break; <br>            case 3: <br>                top = delete(stack, top); <br>                break; <br>            case 4: <br>                list(stack, top); <br>                break; <br>            default: <br>                printf("\né¸é …éŒ¯èª¤ï¼"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>// ä»¥ä¸‹ç‚ºå †ç–Šæ“ä½œçš„å¯¦ä½œ <br>int creates(int stack[]) { <br>    int i; <br><br>    for(i = 0; i &lt; MAX; i++) <br>        stack[i] = 0; <br><br>    return -1; <br>} <br><br>int isEmpty(int top) { <br>    return (top == -1); <br>} <br><br>int stacktop(int stack[], int top) { <br>    return stack[top]; <br>} <br><br>int add(int stack[], int top, int item) { <br>    int t = top; <br><br>    if(t &gt;= MAX-1) { <br>        printf("\nå †ç–Šå·²æ»¿ï¼"); <br>        return t; <br>    } <br><br>    stack[++t] = item; <br><br>    return t; <br>} <br><br>int delete(int stack[], int top) { <br>    int t = top; <br><br>    if(isEmpty(t)) { <br>        printf("\nå †ç–Šå·²ç©ºï¼"); <br>        return t; <br>    } <br><br>    return --t; <br>} <br><br>void list(int stack[], int top) { <br>    int t = top; <br><br>    printf("\nå †ç–Šå…§å®¹ï¼š"); <br>    while(!isEmpty(t)) { <br>        printf("%d ", stack[t]); <br>        t--; <br>    } <br>}</pre>
 
 <br>
 
