--- a/AlgorithmGossip/SparseMatrix.htm
+++ b/AlgorithmGossip/SparseMatrix.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>µ}²¨¯x°}</title>
+  <title>ç¨€ç–çŸ©é™£</title>
 </head>
 
 
@@ -61,21 +61,21 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: µ}²¨¯x°}</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ç¨€ç–çŸ©é™£</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦pªG¦b¯x°}¤¤¡A¦h¼Æªº¤¸¯À¨Ã¨S¦³¸ê®Æ¡AºÙ¦¹¯x°}¬°µ}²¨¯x°}¡]sparse
-matrix¡^¡A¥Ñ©ó¯x°}¦bµ{¦¡¤¤±`¨Ï¥Î¤Gºû°}¦Cªí¥Ü¡A¤Gºû°}¦Cªº¤j¤p»P¨Ï¥Îªº°O¾ĞÅéªÅ¶¡¦¨¥¿¤ñ¡A¦pªG¦h¼Æªº¤¸¯À¨S¦³¸ê®Æ¡A«h·|³y¦¨°O¾ĞÅéªÅ¶¡ªº®ö¶O¡A¬°
-¦¹¡A¥²¶·³]­pµ}²¨¯x°}ªº°}¦CÀx¦s¤è¦¡¡A§Q¥Î¸û¤Öªº°O¾ĞÅéªÅ¶¡Àx¦s§¹¾ãªº¯x°}¸ê°T¡C<br>
+å¦‚æœåœ¨çŸ©é™£ä¸­ï¼Œå¤šæ•¸çš„å…ƒç´ ä¸¦æ²’æœ‰è³‡æ–™ï¼Œç¨±æ­¤çŸ©é™£ç‚ºç¨€ç–çŸ©é™£ï¼ˆsparse
+matrixï¼‰ï¼Œç”±æ–¼çŸ©é™£åœ¨ç¨‹å¼ä¸­å¸¸ä½¿ç”¨äºŒç¶­é™£åˆ—è¡¨ç¤ºï¼ŒäºŒç¶­é™£åˆ—çš„å¤§å°èˆ‡ä½¿ç”¨çš„è¨˜æ†¶é«”ç©ºé–“æˆæ­£æ¯”ï¼Œå¦‚æœå¤šæ•¸çš„å…ƒç´ æ²’æœ‰è³‡æ–™ï¼Œå‰‡æœƒé€ æˆè¨˜æ†¶é«”ç©ºé–“çš„æµªè²»ï¼Œç‚º
+æ­¤ï¼Œå¿…é ˆè¨­è¨ˆç¨€ç–çŸ©é™£çš„é™£åˆ—å„²å­˜æ–¹å¼ï¼Œåˆ©ç”¨è¼ƒå°‘çš„è¨˜æ†¶é«”ç©ºé–“å„²å­˜å®Œæ•´çš„çŸ©é™£è³‡è¨Šã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦b³oÃä©Ò¤¶²Ğªº¤èªk¸û¬°Â²³æ¡A°}¦C¥uÀx¦s¯x°}ªº¦æ¼Æ¡B¦C¼Æ»P¦³¸ê®Æªº¯Á¤Ş¦ì¸m¤Î¨ä­È¡A¦b»İ­n¨Ï¥Î¯x°}¸ê®Æ®É¡A¦A³z¹Lµ{¦¡¹Bºâ¥[¥HÁÙ­ì¡A¨Ò¦p­Y¯x°}¸ê®Æ¦p¤U ¡A¨ä¤¤0ªí¥Ü¯x°}¤¤¸Ó¦ì¸m¨S¦³¸ê®Æ¡G<br>
+åœ¨é€™é‚Šæ‰€ä»‹ç´¹çš„æ–¹æ³•è¼ƒç‚ºç°¡å–®ï¼Œé™£åˆ—åªå„²å­˜çŸ©é™£çš„è¡Œæ•¸ã€åˆ—æ•¸èˆ‡æœ‰è³‡æ–™çš„ç´¢å¼•ä½ç½®åŠå…¶å€¼ï¼Œåœ¨éœ€è¦ä½¿ç”¨çŸ©é™£è³‡æ–™æ™‚ï¼Œå†é€éç¨‹å¼é‹ç®—åŠ ä»¥é‚„åŸï¼Œä¾‹å¦‚è‹¥çŸ©é™£è³‡æ–™å¦‚ä¸‹ ï¼Œå…¶ä¸­0è¡¨ç¤ºçŸ©é™£ä¸­è©²ä½ç½®æ²’æœ‰è³‡æ–™ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">0&nbsp; 0&nbsp; 0&nbsp; 0&nbsp; 0&nbsp; 0 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -91,7 +91,7 @@ matrix¡^¡A¥Ñ©ó¯x°}¦bµ{¦¡¤¤±`¨Ï¥Î¤Gºû°}¦Cªí¥Ü¡A¤Gºû°}¦Cªº¤j¤p»P¨Ï¥Îªº°O¾ĞÅéªÅ¶¡¦¨
 
 <br>
 
-³o­Ó¯x°}¬O5X6¯x°}¡A«D¹s¤¸¯À¦³4­Ó¡A±z­n¨Ï¥Îªº°}¦C²Ä¤@¦C°O¿ı¨ä¦C¼Æ¡B¦æ¼Æ»P«D¹s¤¸¯À­Ó¼Æ¡G<br>
+é€™å€‹çŸ©é™£æ˜¯5X6çŸ©é™£ï¼Œéé›¶å…ƒç´ æœ‰4å€‹ï¼Œæ‚¨è¦ä½¿ç”¨çš„é™£åˆ—ç¬¬ä¸€åˆ—è¨˜éŒ„å…¶åˆ—æ•¸ã€è¡Œæ•¸èˆ‡éé›¶å…ƒç´ å€‹æ•¸ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">5&nbsp; 6&nbsp; 4 </span><br>
 
@@ -99,7 +99,7 @@ matrix¡^¡A¥Ñ©ó¯x°}¦bµ{¦¡¤¤±`¨Ï¥Î¤Gºû°}¦Cªí¥Ü¡A¤Gºû°}¦Cªº¤j¤p»P¨Ï¥Îªº°O¾ĞÅéªÅ¶¡¦¨
 
 <br>
 
-°}¦Cªº²Ä¤G¦C°_¡A°O¿ı¨ä¦ì¸mªº¦C¯Á¤Ş¡B¦æ¯Á¤Ş»PÀx¦s­È¡G<br>
+é™£åˆ—çš„ç¬¬äºŒåˆ—èµ·ï¼Œè¨˜éŒ„å…¶ä½ç½®çš„åˆ—ç´¢å¼•ã€è¡Œç´¢å¼•èˆ‡å„²å­˜å€¼ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">1&nbsp; 1&nbsp; 3 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -113,7 +113,7 @@ matrix¡^¡A¥Ñ©ó¯x°}¦bµ{¦¡¤¤±`¨Ï¥Î¤Gºû°}¦Cªí¥Ü¡A¤Gºû°}¦Cªº¤j¤p»P¨Ï¥Îªº°O¾ĞÅéªÅ¶¡¦¨
 
 <br>
 
-©Ò¥H­ì¥»­n¥Î30­Ó¤¸¯ÀÀx¦sªº¯x°}¸ê°T¡A²{¦b¥u¨Ï¥Î¤F15­Ó¤¸¯À¨ÓÀx¦s¡A¸`¬Ù¤F¤£¤Ö°O¾ĞÅéªº¨Ï¥Î¡C <br>
+æ‰€ä»¥åŸæœ¬è¦ç”¨30å€‹å…ƒç´ å„²å­˜çš„çŸ©é™£è³‡è¨Šï¼Œç¾åœ¨åªä½¿ç”¨äº†15å€‹å…ƒç´ ä¾†å„²å­˜ï¼Œç¯€çœäº†ä¸å°‘è¨˜æ†¶é«”çš„ä½¿ç”¨ã€‚ <br>
 
 
 <ul>
@@ -124,7 +124,7 @@ matrix¡^¡A¥Ñ©ó¯x°}¦bµ{¦¡¤¤±`¨Ï¥Î¤Gºû°}¦Cªí¥Ü¡A¤Gºû°}¦Cªº¤j¤p»P¨Ï¥Îªº°O¾ĞÅéªÅ¶¡¦¨
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int num[5][3] = {{5, 6, 4}, <br>                     {1, 1, 3}, <br>                     {2, 3, 6}, <br>                     {3, 2, 9}, <br>                     {4, 4, 12}}; <br>    int i, j, k = 1; <br><br>    printf("sparse matrix¡G\n"); <br>    for(i = 0; i &lt; 5; i++) { <br>        for(j = 0; j &lt; 3; j++) { <br>            printf("%4d", num[i][j]); <br>        } <br>        putchar('\n'); <br>    } <br><br>    printf("\nmatrixÁÙ­ì¡G\n"); <br>    for(i = 0; i &lt; num[0][0]; i++) { <br>        for(j = 0; j &lt; num[0][1]; j++) { <br>            if(k &lt; num[0][2] &amp;&amp; <br>               i == num[k][0] &amp;&amp; j == num[k][1]) { <br>                printf("%4d ", num[k][2]); <br>                k++; <br>            } <br>            else <br>                printf("%4d ", 0); <br>        } <br>        putchar('\n'); <br>    } <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int num[5][3] = {{5, 6, 4}, <br>                     {1, 1, 3}, <br>                     {2, 3, 6}, <br>                     {3, 2, 9}, <br>                     {4, 4, 12}}; <br>    int i, j, k = 1; <br><br>    printf("sparse matrixï¼š\n"); <br>    for(i = 0; i &lt; 5; i++) { <br>        for(j = 0; j &lt; 3; j++) { <br>            printf("%4d", num[i][j]); <br>        } <br>        putchar('\n'); <br>    } <br><br>    printf("\nmatrixé‚„åŸï¼š\n"); <br>    for(i = 0; i &lt; num[0][0]; i++) { <br>        for(j = 0; j &lt; num[0][1]; j++) { <br>            if(k &lt; num[0][2] &amp;&amp; <br>               i == num[k][0] &amp;&amp; j == num[k][1]) { <br>                printf("%4d ", num[k][2]); <br>                k++; <br>            } <br>            else <br>                printf("%4d ", 0); <br>        } <br>        putchar('\n'); <br>    } <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
