--- a/AlgorithmGossip/ShuffleCard.htm
+++ b/AlgorithmGossip/ShuffleCard.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¬~¼³§JµP¡]¶Ã¼Æ±Æ¦C¡^</title>
+  <title>æ´—æ’²å…‹ç‰Œï¼ˆäº‚æ•¸æ’åˆ—ï¼‰</title>
 </head>
 
 
@@ -61,21 +61,21 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¬~¼³§JµP¡]¶Ã¼Æ±Æ¦C¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;æ´—æ’²å…‹ç‰Œï¼ˆäº‚æ•¸æ’åˆ—ï¼‰</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
-¬~¼³§JµPªº­ì²z¨ä¹ê»P¶Ã¼Æ±Æ¦C¬O¬Û¦Pªº¡A³£¬O±N¤@²Õ¼Æ¦r¡]¨Ò¦p1¡ãN¡^¥´¶Ã­«·s±Æ¦C¡A¥u¤£¹L¬~¼³§JµP¦h¤F¤@­Óªá¦â§PÂ_ªº°Ê§@¦Ó¤w¡C<br>
-<h2>¸Ñªk</h2>
-ªì¾ÇªÌ³q±`·|ª½±µ·Q¨ì¡AÀH¾÷²£¥Í1¡ãNªº¶Ã¼Æ¨Ã±N¤§¦s¤J°}¦C¤¤¡A«á¨Ó²£¥Íªº¶Ã¼Æ¦s¤J°}¦C«e¥²¶·¥ıÀË¬d°}¦C¤¤¬O§_¤w¦³­«½Æªº¼Æ¦r¡A¦pªG¦³³o­Ó¼Æ´N¤£¦s¤J¡A¦A­«·s²£¥Í¤U¤@­Ó¼Æ¡A¹B®ğ¤£¦nªº¸Ü¡A­«½Æªº¦¸¼Æ´N·|«Ü¦h¡Aµ{¦¡ªº°õ¦æ³t«×´N«ÜºC¤F¡A³o¤£¬O¤@­Ó¦n¤èªk¡C<br>
+<h2>èªªæ˜</h2>
+æ´—æ’²å…‹ç‰Œçš„åŸç†å…¶å¯¦èˆ‡äº‚æ•¸æ’åˆ—æ˜¯ç›¸åŒçš„ï¼Œéƒ½æ˜¯å°‡ä¸€çµ„æ•¸å­—ï¼ˆä¾‹å¦‚1ï½Nï¼‰æ‰“äº‚é‡æ–°æ’åˆ—ï¼Œåªä¸éæ´—æ’²å…‹ç‰Œå¤šäº†ä¸€å€‹èŠ±è‰²åˆ¤æ–·çš„å‹•ä½œè€Œå·²ã€‚<br>
+<h2>è§£æ³•</h2>
+åˆå­¸è€…é€šå¸¸æœƒç›´æ¥æƒ³åˆ°ï¼Œéš¨æ©Ÿç”¢ç”Ÿ1ï½Nçš„äº‚æ•¸ä¸¦å°‡ä¹‹å­˜å…¥é™£åˆ—ä¸­ï¼Œå¾Œä¾†ç”¢ç”Ÿçš„äº‚æ•¸å­˜å…¥é™£åˆ—å‰å¿…é ˆå…ˆæª¢æŸ¥é™£åˆ—ä¸­æ˜¯å¦å·²æœ‰é‡è¤‡çš„æ•¸å­—ï¼Œå¦‚æœæœ‰é€™å€‹æ•¸å°±ä¸å­˜å…¥ï¼Œå†é‡æ–°ç”¢ç”Ÿä¸‹ä¸€å€‹æ•¸ï¼Œé‹æ°£ä¸å¥½çš„è©±ï¼Œé‡è¤‡çš„æ¬¡æ•¸å°±æœƒå¾ˆå¤šï¼Œç¨‹å¼çš„åŸ·è¡Œé€Ÿåº¦å°±å¾ˆæ…¢äº†ï¼Œé€™ä¸æ˜¯ä¸€å€‹å¥½æ–¹æ³•ã€‚<br>
 <br>
-¥H1¡ã52ªº¶Ã¼Æ±Æ¦C¬°¨Ò¦n¤F¡A¥i¥H±N°}¦C¥ı¨Ì§Ç¥Ñ1¨ì52¶ñ¤J¡AµM«á¨Ï¥Î¤@­Ó°j°é¨«³X°}¦C¡A¨ÃÀH¾÷²£¥Í1¡ã52ªº¶Ã¼Æ¡A±N²£¥Íªº¶Ã¼Æ·í§@¯Á¤Ş¨ú¥X°}¦C­È¡A¨Ã»P¥Ø«e°}¦C¨«³X¨ìªº­È¬Û¥æ´«¡A¦p¦¹´N¤£¥Î¾á¤ß¶Ã¼Æ­«½Æªº°İÃD¤F¡A°}¦C¨«³X§¹²¦«á¡A©Ò¦³ªº¼Æ¦r¤]´N­«·s±Æ¦C¤F¡C<br>
+ä»¥1ï½52çš„äº‚æ•¸æ’åˆ—ç‚ºä¾‹å¥½äº†ï¼Œå¯ä»¥å°‡é™£åˆ—å…ˆä¾åºç”±1åˆ°52å¡«å…¥ï¼Œç„¶å¾Œä½¿ç”¨ä¸€å€‹è¿´åœˆèµ°è¨ªé™£åˆ—ï¼Œä¸¦éš¨æ©Ÿç”¢ç”Ÿ1ï½52çš„äº‚æ•¸ï¼Œå°‡ç”¢ç”Ÿçš„äº‚æ•¸ç•¶ä½œç´¢å¼•å–å‡ºé™£åˆ—å€¼ï¼Œä¸¦èˆ‡ç›®å‰é™£åˆ—èµ°è¨ªåˆ°çš„å€¼ç›¸äº¤æ›ï¼Œå¦‚æ­¤å°±ä¸ç”¨æ“”å¿ƒäº‚æ•¸é‡è¤‡çš„å•é¡Œäº†ï¼Œé™£åˆ—èµ°è¨ªå®Œç•¢å¾Œï¼Œæ‰€æœ‰çš„æ•¸å­—ä¹Ÿå°±é‡æ–°æ’åˆ—äº†ã€‚<br>
 <br>
-¦Ü©ó¦p¦ó§PÂ_ªá¦â¡H³o¥u¬O°£ªkªº°İÃD¦Ó¤w¡A¨ú°Ó¼Æ§PÂ_ªá¦â¡A¨ú¾l¼Æ§PÂ_¼Æ¦r¡A±z¥i¥Hª½±µ¬İµ{¦¡¤ñ¸û²M·¡¡C<br>
-<h2>¹ê§@</h2>
+è‡³æ–¼å¦‚ä½•åˆ¤æ–·èŠ±è‰²ï¼Ÿé€™åªæ˜¯é™¤æ³•çš„å•é¡Œè€Œå·²ï¼Œå–å•†æ•¸åˆ¤æ–·èŠ±è‰²ï¼Œå–é¤˜æ•¸åˆ¤æ–·æ•¸å­—ï¼Œæ‚¨å¯ä»¥ç›´æ¥çœ‹ç¨‹å¼æ¯”è¼ƒæ¸…æ¥šã€‚<br>
+<h2>å¯¦ä½œ</h2>
 
 
 <ul>
@@ -83,7 +83,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt;<br>#include &lt;stdlib.h&gt;<br>#include &lt;time.h&gt;<br>#define N 52<br><br>int main(void) {<br>    int poker[N + 1];<br>    int i, j, tmp, remain;<br><br>    // ªì©l¤Æ°}¦C <br>    for(i = 1; i &lt;= N; i++)<br>        poker[i] = i; <br><br>    srand(time(0));<br><br>    // ¬~µP <br>    for(i = 1; i &lt;= N; i++) {<br>        j = rand() % 52 + 1;<br>        tmp = poker[i];<br>        poker[i] = poker[j]; <br>        poker[j] = tmp; <br>    }<br><br>    for(i = 1; i &lt;= N; i++) {<br>        // §PÂ_ªá¦â <br>        switch((poker[i]-1) / 13) { <br>            case 0: <br>                printf("®ç"); break;<br>            case 1: <br>                printf("¤ß"); break;<br>            case 2: <br>                printf("¿j"); break;<br>            case 3: <br>                printf("±ö"); break;<br>        } <br><br>        // ¼³§JµP¼Æ¦r <br>        remain = poker[i] % 13;<br>        switch(remain) { <br>            case 0: <br>                printf("K "); break;<br>            case 12: <br>                printf("Q "); break;<br>            case 11: <br>                printf("J "); break;<br>            default: <br>                printf("%d ", remain); break;<br>        } <br><br>        if(i % 13 == 0)<br>            printf("\n");<br>    } <br><br>    return 0;<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt;<br>#include &lt;stdlib.h&gt;<br>#include &lt;time.h&gt;<br>#define N 52<br><br>int main(void) {<br>    int poker[N + 1];<br>    int i, j, tmp, remain;<br><br>    // åˆå§‹åŒ–é™£åˆ— <br>    for(i = 1; i &lt;= N; i++)<br>        poker[i] = i; <br><br>    srand(time(0));<br><br>    // æ´—ç‰Œ <br>    for(i = 1; i &lt;= N; i++) {<br>        j = rand() % 52 + 1;<br>        tmp = poker[i];<br>        poker[i] = poker[j]; <br>        poker[j] = tmp; <br>    }<br><br>    for(i = 1; i &lt;= N; i++) {<br>        // åˆ¤æ–·èŠ±è‰² <br>        switch((poker[i]-1) / 13) { <br>            case 0: <br>                printf("æ¡ƒ"); break;<br>            case 1: <br>                printf("å¿ƒ"); break;<br>            case 2: <br>                printf("ç£š"); break;<br>            case 3: <br>                printf("æ¢…"); break;<br>        } <br><br>        // æ’²å…‹ç‰Œæ•¸å­— <br>        remain = poker[i] % 13;<br>        switch(remain) { <br>            case 0: <br>                printf("K "); break;<br>            case 12: <br>                printf("Q "); break;<br>            case 11: <br>                printf("J "); break;<br>            default: <br>                printf("%d ", remain); break;<br>        } <br><br>        if(i % 13 == 0)<br>            printf("\n");<br>    } <br><br>    return 0;<br>} <br></pre>
 
 <br>
 
@@ -92,7 +92,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class ShuffleCard { <br>    public static void main(String args[]) { <br>        final int N = 52; <br>        int[] poker = new int[N + 1]; <br><br>        // ªì©l¤Æ°}¦C <br>        for(int i = 1; i &lt;= N; i++) <br>            poker[i] = i; <br><br>        // ¬~µP <br>        for(int i = 1; i &lt;= N; i++) { <br>            int j = (int) (Math.random() * N);<br><br>            if(j == 0)<br>                j = 1;<br><br>            int tmp = poker[i]; <br>            poker[i] = poker[j]; <br>            poker[j] = tmp; <br>        } <br><br>        for(int i = 1; i &lt;= N; i++) { <br>            // §PÂ_ªá¦â <br>            switch((poker[i]-1) / 13) { <br>                case 0: <br>                    System.out.print("®ç"); break; <br>                case 1: <br>                    System.out.print("¤ß"); break; <br>                case 2: <br>                    System.out.print("¿j"); break; <br>                case 3: <br>                    System.out.print("±ö"); break; <br>            } <br><br>            // ¼³§JµP¼Æ¦r <br>            int remain = poker[i] % 13; <br>            switch(remain) { <br>                case 0: <br>                    System.out.print("K "); break; <br>                case 12: <br>                    System.out.print("Q "); break; <br>                case 11: <br>                    System.out.print("J "); break; <br>                default: <br>                    System.out.print(remain + " "); break; <br>            } <br><br>            if(i % 13 == 0) <br>                System.out.println(""); <br>        } <br>    } <br>}</pre>
+<pre>public class ShuffleCard { <br>    public static void main(String args[]) { <br>        final int N = 52; <br>        int[] poker = new int[N + 1]; <br><br>        // åˆå§‹åŒ–é™£åˆ— <br>        for(int i = 1; i &lt;= N; i++) <br>            poker[i] = i; <br><br>        // æ´—ç‰Œ <br>        for(int i = 1; i &lt;= N; i++) { <br>            int j = (int) (Math.random() * N);<br><br>            if(j == 0)<br>                j = 1;<br><br>            int tmp = poker[i]; <br>            poker[i] = poker[j]; <br>            poker[j] = tmp; <br>        } <br><br>        for(int i = 1; i &lt;= N; i++) { <br>            // åˆ¤æ–·èŠ±è‰² <br>            switch((poker[i]-1) / 13) { <br>                case 0: <br>                    System.out.print("æ¡ƒ"); break; <br>                case 1: <br>                    System.out.print("å¿ƒ"); break; <br>                case 2: <br>                    System.out.print("ç£š"); break; <br>                case 3: <br>                    System.out.print("æ¢…"); break; <br>            } <br><br>            // æ’²å…‹ç‰Œæ•¸å­— <br>            int remain = poker[i] % 13; <br>            switch(remain) { <br>                case 0: <br>                    System.out.print("K "); break; <br>                case 12: <br>                    System.out.print("Q "); break; <br>                case 11: <br>                    System.out.print("J "); break; <br>                default: <br>                    System.out.print(remain + " "); break; <br>            } <br><br>            if(i % 13 == 0) <br>                System.out.println(""); <br>        } <br>    } <br>}</pre>
 
 
 
