--- a/AlgorithmGossip/ShakerSort.htm
+++ b/AlgorithmGossip/ShakerSort.htm
@@ -39,7 +39,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -52,7 +52,7 @@
   
   
   
-  <title>Shaker ±Æ§Çªk - §ï¨}ªº®ğªw±Æ§Ç</title>
+  <title>Shaker æ’åºæ³• - æ”¹è‰¯çš„æ°£æ³¡æ’åº</title>
 </head>
 
 
@@ -71,16 +71,16 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;Shaker ±Æ§Çªk - §ï¨}ªº®ğªw±Æ§Ç</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;Shaker æ’åºæ³• - æ”¹è‰¯çš„æ°£æ³¡æ’åº</a></h1>
 
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-½Ğ¬İ¬İ¤§«e¤¶²Ğ¹Lªº®ğªw±Æ§Çªk¡G<br>
+è«‹çœ‹çœ‹ä¹‹å‰ä»‹ç´¹éçš„æ°£æ³¡æ’åºæ³•ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp;&nbsp; for(i = 0; i &lt; MAX-1 &amp;&amp; flag == 1; i++) { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -106,25 +106,25 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨Æ¹ê¤W³o­Ó®ğªw±Æ§Çªk¤w¸g¤£¬O³æ¯Âªº®ğªw±Æ§Ç¤F¡A¥¦¨Ï¥Î¤FºX¼Ğ»P¥kºİ¥ª²¾¨â­Ó¤èªk¨Ó§ï¶i±Æ§Çªº®Ä¯à¡A¦ÓShaker±Æ§Çªk¨Ï¥Î¨ì«á­±³o­ÓÆ[©À¶i¤@¨B§ï¨}®ğªw±Æ§Çªk¡C<br>
+äº‹å¯¦ä¸Šé€™å€‹æ°£æ³¡æ’åºæ³•å·²ç¶“ä¸æ˜¯å–®ç´”çš„æ°£æ³¡æ’åºäº†ï¼Œå®ƒä½¿ç”¨äº†æ——æ¨™èˆ‡å³ç«¯å·¦ç§»å…©å€‹æ–¹æ³•ä¾†æ”¹é€²æ’åºçš„æ•ˆèƒ½ï¼Œè€ŒShakeræ’åºæ³•ä½¿ç”¨åˆ°å¾Œé¢é€™å€‹è§€å¿µé€²ä¸€æ­¥æ”¹è‰¯æ°£æ³¡æ’åºæ³•ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦b¤W­±ªº®ğªw±Æ§Çªk¤¤¡A¥æ´«ªº°Ê§@¨Ã¤£·|¤@ª½¶i¦æ¦Ü°}¦Cªº³Ì«á¤@­Ó¡A¦Ó¬O·|¶i¦æ¦ÜMAX-i-1¡A©Ò¥H±Æ§Çªº¹Lµ{¤¤¡A°}¦C¥k¤è±Æ§Ç¦nªº¤¸¯À·|¤@ª½¼W¥[¡A¨Ï±o¥ªÃä±Æ§Çªº¦¸¼Æ³vº¥´î¤Ö¡A¦p§Ú­Ìªº¨Ò¤l©Ò¥Ü¡G<br>
+åœ¨ä¸Šé¢çš„æ°£æ³¡æ’åºæ³•ä¸­ï¼Œäº¤æ›çš„å‹•ä½œä¸¦ä¸æœƒä¸€ç›´é€²è¡Œè‡³é™£åˆ—çš„æœ€å¾Œä¸€å€‹ï¼Œè€Œæ˜¯æœƒé€²è¡Œè‡³MAX-i-1ï¼Œæ‰€ä»¥æ’åºçš„éç¨‹ä¸­ï¼Œé™£åˆ—å³æ–¹æ’åºå¥½çš„å…ƒç´ æœƒä¸€ç›´å¢åŠ ï¼Œä½¿å¾—å·¦é‚Šæ’åºçš„æ¬¡æ•¸é€æ¼¸æ¸›å°‘ï¼Œå¦‚æˆ‘å€‘çš„ä¾‹å­æ‰€ç¤ºï¼š<br>
 
 <br>
 
-±Æ§Ç«e¡G95 27 90 49 80 58 6 9 18 50<br>
+æ’åºå‰ï¼š95 27 90 49 80 58 6 9 18 50<br>
 
 <br>
 
 <ol>
 
-  <li>27 90 49 80 58 6 9 18 50 [95] 95¯B¥X</li>
+  <li>27 90 49 80 58 6 9 18 50 [95] 95æµ®å‡º</li>
 
-  <li>27 49 80 58 6 9 18 50 [90 95] 90¯B¥X</li>
+  <li>27 49 80 58 6 9 18 50 [90 95] 90æµ®å‡º</li>
 
-  <li>27 49 58 6 9 18 50 [80 90 95] 80¯B¥X</li>
+  <li>27 49 58 6 9 18 50 [80 90 95] 80æµ®å‡º</li>
 
   <li>27 49 6 9 18 50 [58 80 90 95] ......</li>
 
@@ -138,55 +138,55 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤è¬A¸¹¬A¦íªº³¡¥÷ªí¥Ü¤w±Æ§Ç§¹²¦¡AShaker±Æ§Ç¨Ï¥Î¤F³o­Ó·§©À¡A¦pªGÅı¥ªÃäªº¤¸¯À¤]¨ã¦³³o¼Ëªº©Ê½è¡AÅı¥ª¥k¨âÃäªº¤¸¯À³£¯à¥ı±Æ§Ç§¹¦¨¡A¦p¦¹¥¼±Æ§Çªº¤¸¯À·|¶°¤¤¦b¤¤¶¡¡A¥Ñ©ó¥ª¥k¨âÃä¦P®É±Æ§Ç¡A¤¤¶¡¥¼±Æ§Çªº³¡¥÷±N·|«Ü§Öªº´î¤Ö¡C<br>
+æ–¹æ‹¬è™Ÿæ‹¬ä½çš„éƒ¨ä»½è¡¨ç¤ºå·²æ’åºå®Œç•¢ï¼ŒShakeræ’åºä½¿ç”¨äº†é€™å€‹æ¦‚å¿µï¼Œå¦‚æœè®“å·¦é‚Šçš„å…ƒç´ ä¹Ÿå…·æœ‰é€™æ¨£çš„æ€§è³ªï¼Œè®“å·¦å³å…©é‚Šçš„å…ƒç´ éƒ½èƒ½å…ˆæ’åºå®Œæˆï¼Œå¦‚æ­¤æœªæ’åºçš„å…ƒç´ æœƒé›†ä¸­åœ¨ä¸­é–“ï¼Œç”±æ–¼å·¦å³å…©é‚ŠåŒæ™‚æ’åºï¼Œä¸­é–“æœªæ’åºçš„éƒ¨ä»½å°‡æœƒå¾ˆå¿«çš„æ¸›å°‘ã€‚<br>
 
 <br>
 
-¤èªk´N¦b©ó®ğªw±Æ§ÇªºÂù¦V¶i¦æ¡A¥ıÅı®ğªw±Æ§Ç¥Ñ¥ª¦V¥k¶i¦æ¡A¦A¨ÓÅı®ğªw±Æ§Ç¥Ñ¥k©¹¥ª¶i¦æ¡A¦p¦¹§¹¦¨¤@¦¸±Æ§Çªº°Ê§@¡A¦Ó±z¥²¶·¨Ï¥Îleft»Pright¨â­ÓºX¼Ğ¨Ó°O¿ı¥ª¥k¨âºİ¤w±Æ§Çªº¤¸¯À¦ì¸m¡C<br>
+æ–¹æ³•å°±åœ¨æ–¼æ°£æ³¡æ’åºçš„é›™å‘é€²è¡Œï¼Œå…ˆè®“æ°£æ³¡æ’åºç”±å·¦å‘å³é€²è¡Œï¼Œå†ä¾†è®“æ°£æ³¡æ’åºç”±å³å¾€å·¦é€²è¡Œï¼Œå¦‚æ­¤å®Œæˆä¸€æ¬¡æ’åºçš„å‹•ä½œï¼Œè€Œæ‚¨å¿…é ˆä½¿ç”¨leftèˆ‡rightå…©å€‹æ——æ¨™ä¾†è¨˜éŒ„å·¦å³å…©ç«¯å·²æ’åºçš„å…ƒç´ ä½ç½®ã€‚<br>
 
 <br>
 
-¤@­Ó±Æ§Çªº¨Ò¤l¦p¤U©Ò¥Ü¡G<br>
+ä¸€å€‹æ’åºçš„ä¾‹å­å¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 
 <br>
 
-±Æ§Ç«e¡G45 19 77 81 13 28 18 19 77 11<br>
+æ’åºå‰ï¼š45 19 77 81 13 28 18 19 77 11<br>
 
 <br>
 
-<div style="margin-left: 40px;">©¹¥k±Æ§Ç¡G19 45 77 13 28 18 19 77 11 [81]<br>
+<div style="margin-left: 40px;">å¾€å³æ’åºï¼š19 45 77 13 28 18 19 77 11 [81]<br>
 
-¦V¥ª±Æ§Ç¡G[11] 19 45 77 13 28 18 19 77 [81]<br>
-
-<br>
-
-©¹¥k±Æ§Ç¡G[11] 19 45 13 28 18 19 [77 77 81]<br>
-
-¦V¥ª±Æ§Ç¡G[11 13] 19 45 18 28 19 [77 77 81]<br>
+å‘å·¦æ’åºï¼š[11] 19 45 77 13 28 18 19 77 [81]<br>
 
 <br>
 
-©¹¥k±Æ§Ç¡G[11 13] 19 18 28 19 [45 77 77 81]<br>
+å¾€å³æ’åºï¼š[11] 19 45 13 28 18 19 [77 77 81]<br>
 
-¦V¥ª±Æ§Ç¡G[11 13 18] 19 19 28 [45 77 77 81]<br>
+å‘å·¦æ’åºï¼š[11 13] 19 45 18 28 19 [77 77 81]<br>
 
 <br>
 
-©¹¥k±Æ§Ç¡G[11 13 18] 19 19 [28 45 77 77 81]<br>
+å¾€å³æ’åºï¼š[11 13] 19 18 28 19 [45 77 77 81]<br>
 
-¦V¥ª±Æ§Ç¡G[11 13 18 19 19] [28 45 77 77 81]<br>
+å‘å·¦æ’åºï¼š[11 13 18] 19 19 28 [45 77 77 81]<br>
+
+<br>
+
+å¾€å³æ’åºï¼š[11 13 18] 19 19 [28 45 77 77 81]<br>
+
+å‘å·¦æ’åºï¼š[11 13 18 19 19] [28 45 77 77 81]<br>
 
 </div>
 
 <br>
 
-¦p¤W©Ò¥Ü¡A¬A¸¹¤¤ªí¥Ü¥ª¥k¨âÃä¤w±Æ§Ç§¹¦¨ªº³¡¥÷¡A·íleft &gt; right®É¡A«h±Æ§Ç§¹¦¨¡C <br>
+å¦‚ä¸Šæ‰€ç¤ºï¼Œæ‹¬è™Ÿä¸­è¡¨ç¤ºå·¦å³å…©é‚Šå·²æ’åºå®Œæˆçš„éƒ¨ä»½ï¼Œç•¶left &gt; rightæ™‚ï¼Œå‰‡æ’åºå®Œæˆã€‚ <br>
 
 
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -197,7 +197,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void shakersort(int[]); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    shakersort(number); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void shakersort(int number[]) { <br>    int i, left = 0, right = MAX - 1, shift = 0; <br><br>    while(left &lt; right) { <br>        // ¦V¥k¶i¦æ®ğªw±Æ§Ç <br>        for(i = left; i &lt; right; i++) { <br>            if(number[i] &gt; number[i+1]) { <br>                SWAP(number[i], number[i+1]); <br>                shift = i; <br>            } <br>        } <br>        right = shift; <br><br>        printf("\n©¹¥k±Æ§Ç¡G"); <br>        for(i = 0; i &lt; MAX; i++) <br>            printf("%d ", number[i]); <br><br>        // ¦V¥ª¶i¦æ®ğªw±Æ§Ç <br>        for(i = right; i &gt; left; i--) { <br>            if(number[i] &lt; number[i-1]) { <br>                SWAP(number[i], number[i-1]); <br>                shift = i; <br>            } <br>        } <br>        left = shift; <br><br>        printf("\n¦V¥ª±Æ§Ç¡G"); <br>        for(i = 0; i &lt; MAX; i++) <br>            printf("%d ", number[i]); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void shakersort(int[]); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>        printf("%d ", number[i]); <br>    } <br><br>    shakersort(number); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void shakersort(int number[]) { <br>    int i, left = 0, right = MAX - 1, shift = 0; <br><br>    while(left &lt; right) { <br>        // å‘å³é€²è¡Œæ°£æ³¡æ’åº <br>        for(i = left; i &lt; right; i++) { <br>            if(number[i] &gt; number[i+1]) { <br>                SWAP(number[i], number[i+1]); <br>                shift = i; <br>            } <br>        } <br>        right = shift; <br><br>        printf("\nå¾€å³æ’åºï¼š"); <br>        for(i = 0; i &lt; MAX; i++) <br>            printf("%d ", number[i]); <br><br>        // å‘å·¦é€²è¡Œæ°£æ³¡æ’åº <br>        for(i = right; i &gt; left; i--) { <br>            if(number[i] &lt; number[i-1]) { <br>                SWAP(number[i], number[i-1]); <br>                shift = i; <br>            } <br>        } <br>        left = shift; <br><br>        printf("\nå‘å·¦æ’åºï¼š"); <br>        for(i = 0; i &lt; MAX; i++) <br>            printf("%d ", number[i]); <br>    } <br>} <br></pre>
 
 
 <br>
@@ -211,7 +211,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class ShakerSort {<br>    public static void sort(int[] number) {<br>        int i, left = 0, <br>               right = number.length - 1, <br>               shift = 0; <br><br>        while(left &lt; right) { <br>            // ¦V¥k¶i¦æ®ğªw±Æ§Ç <br>            for(i = left; i &lt; right; i++) { <br>                if(number[i] &gt; number[i+1]) { <br>                    swap(number, i, i+1); <br>                    shift = i; <br>                } <br>            } <br>            right = shift; <br><br>            // ¦V¥ª¶i¦æ®ğªw±Æ§Ç <br>            for(i = right; i &gt; left; i--) { <br>                if(number[i] &lt; number[i-1]) { <br>                    swap(number, i ,i-1); <br>                    shift = i; <br>                } <br>            } <br>            left = shift; <br>        } <br>    }<br><br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>} </pre>
+<pre>public class ShakerSort {<br>    public static void sort(int[] number) {<br>        int i, left = 0, <br>               right = number.length - 1, <br>               shift = 0; <br><br>        while(left &lt; right) { <br>            // å‘å³é€²è¡Œæ°£æ³¡æ’åº <br>            for(i = left; i &lt; right; i++) { <br>                if(number[i] &gt; number[i+1]) { <br>                    swap(number, i, i+1); <br>                    shift = i; <br>                } <br>            } <br>            right = shift; <br><br>            // å‘å·¦é€²è¡Œæ°£æ³¡æ’åº <br>            for(i = right; i &gt; left; i--) { <br>                if(number[i] &lt; number[i-1]) { <br>                    swap(number, i ,i-1); <br>                    shift = i; <br>                } <br>            } <br>            left = shift; <br>        } <br>    }<br><br>    private static void swap(int[] number, int i, int j) {<br>        int t; <br>        t = number[i]; <br>        number[i] = number[j]; <br>        number[j] = t;<br>    }<br>} </pre>
 
 <br>
 
